--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,12 +2,13 @@ project:
   type: website
 
 website:
-  title: "test"
+  title: "“Vegetable Price Forecasting for Petta and Dambulla Markets in Sri Lanka"
   navbar:
     left:
       - href: index.qmd
         text: Home
       - about.qmd
+      - activities.qmd
 
 format:
   html:
