--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,8 @@ project:
   type: website
 
 website:
-  title: "“Vegetable Price Forecasting for Petta and Dambulla Markets in Sri Lanka"
+  title: "Vegetable Price Forecasting for Petta and Dambulla Markets in Sri Lanka"
+  google-analytics: "G-2SZY4Y3LJQ"
   navbar:
     left:
       - href: index.qmd
